--- a/view/templates/index.html
+++ b/view/templates/index.html
@@ -9,7 +9,19 @@
     <link rel="stylesheet" href="/static/style.css">
 </head>
 <body>
-<h1>Blaze</h1>
-<h3>Welcome to Blaze</h3>
+    <h1>Blaze</h1>
+    <h3>Welcome to Blaze</h3>
+    <div hx-ext="ws" ws-connect='/ws'>
+        <form id="IDForm" hx-headers='{"Content-Type": "application/json"}' ws-send>
+            <label for="clientID">Client:</label>
+            <input type="text" id="clientID" name="clientID">
+            <label for="targetID">Target:</label>
+            <input type="text" id="targetID" name="targetID">
+            <button type="submit">Submit</button>
+        </form>
+    </div>
+
+    <div id="response"></div>
+</div>
 </body>
 </html>
